--- a/Webpro/pom.xml
+++ b/Webpro/pom.xml
@@ -83,7 +83,30 @@
 		</dependency>
 		
 		
-		
+		<!-- oauth2 login naver -->
+		<dependency>
+			<groupId>com.github.scribejava</groupId>		    
+			<artifactId>scribejava-apis</artifactId>
+			<version>5.6.0</version>
+		</dependency>
+
+        <dependency>
+			<groupId>com.github.scribejava</groupId>		    
+			<artifactId>scribejava-core</artifactId>
+			<version>5.6.0</version>
+        </dependency>
+        
+        
+        
+        
+        <!-- oauth2 login google-->
+		<dependency>
+	        <groupId>org.springframework.social</groupId>
+	        <artifactId>spring-social-google</artifactId>
+	        <version>1.0.0.RELEASE</version>
+  		</dependency>
+
+
 
 		
 		<dependency>
@@ -94,6 +117,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
 		</dependency>
+		
 	</dependencies>
 
 	<build>
