--- a/final_project/src/main/resources/application.yml
+++ b/final_project/src/main/resources/application.yml
@@ -21,7 +21,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update #create update none
+      ddl-auto: update 
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     show-sql: true
@@ -30,37 +30,54 @@ spring:
     oauth2:
       client:
         registration:
-          google: # /oauth2/authorization/google 이 주소를 동작하게 한다.
-            client-id: 머시기
-            client-secret: 머시기
+          google: 
+            client-id: 909467115467-9e57tej9dd046nttu6anpb7j06kb4bkv.apps.googleusercontent.com
+            client-secret: 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
             scope:
             - email
             - profile
             
           facebook:
-            client-id: 머시기
-            client-secret: 머시기
+            client-id: 717586280372879
+            client-secret: db556e5cfcc3cd3ef76cf9535ce3cdc5
             scope:
             - email
             - public_profile
-          
-          # 네이버는 OAuth2.0 공식 지원대상이 아니라서 provider 설정이 필요하다.
-          # 요청주소도 다르고, 응답 데이터도 다르기 때문이다.
+            
+          kakao:
+            authorization-grant-type: authorization_code
+            client-id: f4a5e856502f841f71dfc3100d30efc3
+            client-secret: SHjQmxHcVrWVGHUDXnCSlydDDLOFBzhj
+            redirect-uri: http://localhost:8080/auth/kakao/callback
+            scope:
+            - profile_nickname
+            - profile_image
+            
+       
+            
+       
           naver:
-            client-id: 머시기
-            client-secret: 머시기
+            client-id: QUwOMTMSADg3mEB7l_VH
+            client-secret: YhC_Fy6BBO
             scope:
             - name
             - email
             - profile_image
-            client-name: Naver # 클라이언트 네임은 구글 페이스북도 대문자로 시작하더라.
+            client-name: Naver 
             authorization-grant-type: authorization_code
-            redirect-uri: http://localhost:8080/login/oauth2/code/naver
+            redirect-uri: http://localhost:8080/auth/naver/callback
 
         provider:
           naver:
             authorization-uri: https://nid.naver.com/oauth2.0/authorize
             token-uri: https://nid.naver.com/oauth2.0/token
             user-info-uri: https://openapi.naver.com/v1/nid/me
-            user-name-attribute: response # 회원정보를 json의 response 키값으로 리턴해줌.
+            user-name-attribute: response # 회원정보를 json의 response 키값으로 리턴해줄거임 !!!!!!!!!111
+            
+          kakao:
+            authorizationUri: https://kauth.kakao.com/oauth/authorize
+            tokenUri: https://kauth.kakao.com/oauth/token
+            userInfoUri: https://kapi.kakao.com/v2/user/me
+            userNameAttribute: id
+          
             
