--- a/pro/pom.xml
+++ b/pro/pom.xml
@@ -69,11 +69,32 @@
          <artifactId>spring-boot-devtools</artifactId>
       </dependency>
       
+      <!-- oauth login2 google-->
+      
       <dependency>
             <groupId>org.springframework.social</groupId>
             <artifactId>spring-social-google</artifactId>
             <version>1.0.0.RELEASE</version>
         </dependency>
+        
+        
+        <!-- oauth2 login naver-->
+        
+      <dependency>
+			<groupId>com.github.scribejava</groupId>		    
+			<artifactId>scribejava-apis</artifactId>
+			<version>5.6.0</version>
+	  </dependency>
+
+      <dependency>
+			<groupId>com.github.scribejava</groupId>		    
+			<artifactId>scribejava-core</artifactId>
+			<version>5.6.0</version>
+	  </dependency>
+
+        
+        
+        
    </dependencies>
 
    <build>
