--- a/final_project/pom.xml
+++ b/final_project/pom.xml
@@ -74,6 +74,17 @@
             <artifactId>spring-social-google</artifactId>
             <version>1.0.0.RELEASE</version>
         </dependency>
+        
+        
+        <!-- oauth login facebook -->
+      <dependency>
+            <groupId>org.springframework.social</groupId>
+            <artifactId>spring-social-facebook</artifactId>
+            <version>2.0.3.RELEASE</version>
+      </dependency>
+        
+        
+        
    </dependencies>
 
    <build>
